syntax = "proto3";

package controller.api.resource.v1;

option go_package = "github.com/hashicorp/watchtower/internal/gen/controller/api/resource;resource";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";


enum HostCatalogType {
	HOST_CATALOG_TYPE_UNSPECIFIED = 0;
	HOST_CATALOG_TYPE_EC2 = 1;
	HOST_CATALOG_TYPE_STATIC = 2;
}

// HostCatalog organizes Hosts into HostSets.
message HostCatalog {
	// Output only.
	string uri = 1;
	google.protobuf.StringValue friendly_name = 2;

	// The time this host_catalog was created.
	// Output only.
	google.protobuf.Timestamp created_time = 3;
	// The time this host_catalog was last updated.
	// Output only.
	google.protobuf.Timestamp updated_time = 4;

	// Marks the host_catalog as disabled.  Default is false.
	google.protobuf.BoolValue disabled = 5;

	oneof type_details {
		StaticCatalogDetails static_host_catalog_details = 6;
		Ec2CatalogDetails ec2_host_catalog_details = 7;
	}

	HostCatalogType type = 8;
	// TODO: Figure out how to provide relevant information regarding Host and Set lists on a catalog.
}

message StaticCatalogDetails {
	// nothing here yet.
}

message Ec2CatalogDetails {
	// The AWS regions from which this catalog will retrieve the EC2 instances.
	repeated string regions = 1;

	// The access key used for authenticating with AWS when retrieving EC2 instance details.
	google.protobuf.StringValue  access_key = 2;
	// Input only.
	google.protobuf.StringValue  secret_key = 3;

	// This value will never be returned in a response.
	google.protobuf.BoolValue rotate = 4;
}